# backend/src/routes/application/application.routes.js
@@ -1,9 +1,10 @@
 import { Router } from 'express'
 import { ApplicationController } from '../../controllers/index.js'
 import { requireAuth } from '../../middlewares/index.js'
-import { validateCreateApplication } from '../../validators/index.js'
+import { validateCreateApplication, validateUpdateApplication } from '../../validators/index.js'
 
 export const applicationsRouter = Router()
 
 applicationsRouter.get('/', requireAuth, ApplicationController.getAll)
 applicationsRouter.post('/', requireAuth, validateCreateApplication, ApplicationController.create)
+applicationsRouter.patch('/:id', requireAuth, validateUpdateApplication, ApplicationController.update)
